// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkBankAccountScreen: integration tests (using real Persona component, for instance) renders correctly for each possible kycStatus renders correctly for a KycStatus of approved 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 24,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "#EDEEEF",
            "borderBottomWidth": 1,
            "paddingVertical": 48,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 12,
            }
          }
        >
          <svg
            fill="none"
            height={60}
            style={Object {}}
            testID="VerificationCompleteIcon"
            width={60}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx={30}
              cy={30}
              fill="#F9F6F0"
              r={30}
              style={Object {}}
            />
            <path
              d="M24.776 30.131a.75.75 0 0 0-1.052 1.069l1.052-1.069Zm3.14 4.144-.526.534a.75.75 0 0 0 1.042.011l-.515-.545Zm8.85-7.33a.75.75 0 1 0-1.031-1.09l1.03 1.09ZM23.723 31.2l3.666 3.61 1.053-1.07-3.667-3.609-1.052 1.069Zm4.708 3.62 8.333-7.875-1.03-1.09L27.4 33.73l1.03 1.09Z"
              fill="#1AB775"
              style={Object {}}
            />
            <path
              d="M30 40.5c-5.799 0-10.5-4.701-10.5-10.5h-3c0 7.456 6.044 13.5 13.5 13.5v-3ZM40.5 30c0 5.799-4.701 10.5-10.5 10.5v3c7.456 0 13.5-6.044 13.5-13.5h-3ZM30 19.5c5.799 0 10.5 4.701 10.5 10.5h3c0-7.456-6.044-13.5-13.5-13.5v3Zm0-3c-7.456 0-13.5 6.044-13.5 13.5h3c0-5.799 4.701-10.5 10.5-10.5v-3Z"
              fill="#1AB775"
              style={Object {}}
            />
          </svg>
        </View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.completed.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.completed.description
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.label
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.description
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "marginTop": 48,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F1F0EB",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
              testID="PlaidLinkButton"
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                linkBankAccountScreen.stepTwo.cta
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`LinkBankAccountScreen: integration tests (using real Persona component, for instance) renders correctly for each possible kycStatus renders correctly for a KycStatus of completed 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 24,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "#EDEEEF",
            "borderBottomWidth": 1,
            "paddingVertical": 48,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 12,
            }
          }
        >
          <svg
            fill="none"
            height={60}
            style={Object {}}
            testID="VerificationPendingIcon"
            width={60}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx={30}
              cy={30}
              fill="#F9F6F0"
              r={30}
              style={Object {}}
            />
            <path
              d="M30 22.5V30h6"
              stroke="orange"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={1.5}
              style={Object {}}
            />
            <circle
              cx={30}
              cy={30}
              r={11.25}
              stroke="orange"
              strokeWidth={1.5}
              style={Object {}}
            />
          </svg>
        </View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.pending.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.pending.description
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.label
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.title
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.description
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "marginTop": 48,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F1F0EB",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
              testID="PlaidLinkButton"
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                linkBankAccountScreen.stepTwo.cta
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`LinkBankAccountScreen: integration tests (using real Persona component, for instance) renders correctly for each possible kycStatus renders correctly for a KycStatus of created 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 24,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "#EDEEEF",
            "borderBottomWidth": 1,
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.label
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.description
        </Text>
        <View
          style={
            Object {
              "marginTop": 48,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 100,
                  },
                ]
              }
            >
              <View
                accessibilityState={
                  Object {
                    "disabled": true,
                  }
                }
                accessible={true}
                focusable={false}
                nativeBackgroundAndroid={
                  Object {
                    "attribute": "selectableItemBackground",
                    "rippleRadius": undefined,
                    "type": "ThemeAttrAndroid",
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#97DFC1",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 120,
                    "opacity": undefined,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                  }
                }
                testID="PersonaButton"
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    }
                  }
                >
                  linkBankAccountScreen.begin.cta
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.label
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.title
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.description
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "marginTop": 48,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F1F0EB",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
              testID="PlaidLinkButton"
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                linkBankAccountScreen.stepTwo.cta
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`LinkBankAccountScreen: integration tests (using real Persona component, for instance) renders correctly for each possible kycStatus renders correctly for a KycStatus of declined 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 24,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "#EDEEEF",
            "borderBottomWidth": 1,
            "paddingVertical": 48,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 12,
            }
          }
        >
          <svg
            fill="none"
            height={60}
            style={Object {}}
            testID="VerificationDeniedIcon"
            width={60}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx={30}
              cy={30}
              fill="#F9F6F0"
              r={30}
              style={Object {}}
            />
            <circle
              cx={30}
              cy={30}
              r={11.25}
              stroke="#EA6042"
              strokeWidth={1.5}
              style={Object {}}
            />
            <path
              d="m34.5 25.5-9 9M34.5 34.5l-9-9"
              stroke="#EA6042"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={1.5}
              style={Object {}}
            />
          </svg>
        </View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.failed.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.failed.description
        </Text>
        <View
          style={
            Object {
              "marginTop": 48,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 100,
                  },
                ]
              }
            >
              <View
                accessibilityState={
                  Object {
                    "disabled": true,
                  }
                }
                accessible={true}
                focusable={false}
                nativeBackgroundAndroid={
                  Object {
                    "attribute": "selectableItemBackground",
                    "rippleRadius": undefined,
                    "type": "ThemeAttrAndroid",
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#97DFC1",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 120,
                    "opacity": undefined,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                  }
                }
                testID="PersonaButton"
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    }
                  }
                >
                  linkBankAccountScreen.tryAgain
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "marginTop": 26,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackgroundBorderless",
                "rippleRadius": undefined,
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="SupportContactLink"
          >
            <Text>
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                contactSupport
              </Text>
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.label
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.title
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.description
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "marginTop": 48,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F1F0EB",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
              testID="PlaidLinkButton"
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                linkBankAccountScreen.stepTwo.cta
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`LinkBankAccountScreen: integration tests (using real Persona component, for instance) renders correctly for each possible kycStatus renders correctly for a KycStatus of expired 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 24,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "#EDEEEF",
            "borderBottomWidth": 1,
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.label
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.description
        </Text>
        <View
          style={
            Object {
              "marginTop": 48,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 100,
                  },
                ]
              }
            >
              <View
                accessibilityState={
                  Object {
                    "disabled": true,
                  }
                }
                accessible={true}
                focusable={false}
                nativeBackgroundAndroid={
                  Object {
                    "attribute": "selectableItemBackground",
                    "rippleRadius": undefined,
                    "type": "ThemeAttrAndroid",
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#97DFC1",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 120,
                    "opacity": undefined,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                  }
                }
                testID="PersonaButton"
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    }
                  }
                >
                  linkBankAccountScreen.begin.cta
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.label
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.title
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.description
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "marginTop": 48,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F1F0EB",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
              testID="PlaidLinkButton"
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                linkBankAccountScreen.stepTwo.cta
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`LinkBankAccountScreen: integration tests (using real Persona component, for instance) renders correctly for each possible kycStatus renders correctly for a KycStatus of failed 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 24,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "#EDEEEF",
            "borderBottomWidth": 1,
            "paddingVertical": 48,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 12,
            }
          }
        >
          <svg
            fill="none"
            height={60}
            style={Object {}}
            testID="VerificationDeniedIcon"
            width={60}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx={30}
              cy={30}
              fill="#F9F6F0"
              r={30}
              style={Object {}}
            />
            <circle
              cx={30}
              cy={30}
              r={11.25}
              stroke="#EA6042"
              strokeWidth={1.5}
              style={Object {}}
            />
            <path
              d="m34.5 25.5-9 9M34.5 34.5l-9-9"
              stroke="#EA6042"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={1.5}
              style={Object {}}
            />
          </svg>
        </View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.failed.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.failed.description
        </Text>
        <View
          style={
            Object {
              "marginTop": 48,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 100,
                  },
                ]
              }
            >
              <View
                accessibilityState={
                  Object {
                    "disabled": true,
                  }
                }
                accessible={true}
                focusable={false}
                nativeBackgroundAndroid={
                  Object {
                    "attribute": "selectableItemBackground",
                    "rippleRadius": undefined,
                    "type": "ThemeAttrAndroid",
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#97DFC1",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 120,
                    "opacity": undefined,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                  }
                }
                testID="PersonaButton"
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    }
                  }
                >
                  linkBankAccountScreen.tryAgain
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "marginTop": 26,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackgroundBorderless",
                "rippleRadius": undefined,
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="SupportContactLink"
          >
            <Text>
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                contactSupport
              </Text>
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.label
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.title
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.description
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "marginTop": 48,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F1F0EB",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
              testID="PlaidLinkButton"
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                linkBankAccountScreen.stepTwo.cta
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`LinkBankAccountScreen: integration tests (using real Persona component, for instance) renders correctly for each possible kycStatus renders correctly for a KycStatus of needs-review 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 24,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "#EDEEEF",
            "borderBottomWidth": 1,
            "paddingVertical": 48,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 12,
            }
          }
        >
          <svg
            fill="none"
            height={60}
            style={Object {}}
            testID="VerificationPendingIcon"
            width={60}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx={30}
              cy={30}
              fill="#F9F6F0"
              r={30}
              style={Object {}}
            />
            <path
              d="M30 22.5V30h6"
              stroke="orange"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={1.5}
              style={Object {}}
            />
            <circle
              cx={30}
              cy={30}
              r={11.25}
              stroke="orange"
              strokeWidth={1.5}
              style={Object {}}
            />
          </svg>
        </View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.pending.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.pending.description
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.label
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.title
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.description
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "marginTop": 48,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F1F0EB",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
              testID="PlaidLinkButton"
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                linkBankAccountScreen.stepTwo.cta
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`LinkBankAccountScreen: integration tests (using real Persona component, for instance) renders correctly for each possible kycStatus renders correctly for a KycStatus of not-created 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 24,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "#EDEEEF",
            "borderBottomWidth": 1,
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.label
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.description
        </Text>
        <View
          style={
            Object {
              "marginTop": 48,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 100,
                  },
                ]
              }
            >
              <View
                accessibilityState={
                  Object {
                    "disabled": true,
                  }
                }
                accessible={true}
                focusable={false}
                nativeBackgroundAndroid={
                  Object {
                    "attribute": "selectableItemBackground",
                    "rippleRadius": undefined,
                    "type": "ThemeAttrAndroid",
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#97DFC1",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 120,
                    "opacity": undefined,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                  }
                }
                testID="PersonaButton"
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    }
                  }
                >
                  linkBankAccountScreen.begin.cta
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.label
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.title
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.description
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "marginTop": 48,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F1F0EB",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
              testID="PlaidLinkButton"
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                linkBankAccountScreen.stepTwo.cta
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`LinkBankAccountScreen: integration tests (using real Persona component, for instance) renders correctly for each possible kycStatus renders correctly for a KycStatus of pending 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 24,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "#EDEEEF",
            "borderBottomWidth": 1,
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.label
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.description
        </Text>
        <View
          style={
            Object {
              "marginTop": 48,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 100,
                  },
                ]
              }
            >
              <View
                accessibilityState={
                  Object {
                    "disabled": true,
                  }
                }
                accessible={true}
                focusable={false}
                nativeBackgroundAndroid={
                  Object {
                    "attribute": "selectableItemBackground",
                    "rippleRadius": undefined,
                    "type": "ThemeAttrAndroid",
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#97DFC1",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 120,
                    "opacity": undefined,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                  }
                }
                testID="PersonaButton"
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    }
                  }
                >
                  linkBankAccountScreen.begin.cta
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.label
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.title
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.description
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "marginTop": 48,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F1F0EB",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
              testID="PlaidLinkButton"
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                linkBankAccountScreen.stepTwo.cta
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`LinkBankAccountScreen: integration tests (using real Persona component, for instance) renders correctly for each possible kycStatus renders correctly for a KycStatus of undefined 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "marginHorizontal": 24,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "#EDEEEF",
            "borderBottomWidth": 1,
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.label
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.title
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.begin.description
        </Text>
        <View
          style={
            Object {
              "marginTop": 48,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 100,
                  },
                ]
              }
            >
              <View
                accessibilityState={
                  Object {
                    "disabled": true,
                  }
                }
                accessible={true}
                focusable={false}
                nativeBackgroundAndroid={
                  Object {
                    "attribute": "selectableItemBackground",
                    "rippleRadius": undefined,
                    "type": "ThemeAttrAndroid",
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#97DFC1",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 120,
                    "opacity": undefined,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                  }
                }
                testID="PersonaButton"
              >
                <Text
                  maxFontSizeMultiplier={1}
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    }
                  }
                >
                  linkBankAccountScreen.begin.cta
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 48,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 18,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.label
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Jost-Medium",
              "fontSize": 22,
              "lineHeight": 28,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.title
        </Text>
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          linkBankAccountScreen.stepTwo.description
        </Text>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "marginTop": 48,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              focusable={false}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F1F0EB",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 120,
                  "opacity": undefined,
                  "paddingHorizontal": 24,
                  "paddingVertical": 5,
                }
              }
              testID="PlaidLinkButton"
            >
              <Text
                maxFontSizeMultiplier={1}
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                linkBankAccountScreen.stepTwo.cta
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;
